--- a/main_app/admin/templates/admin/dashboard.html
+++ b/main_app/admin/templates/admin/dashboard.html
@@ -7,5 +7,7 @@
     <h1>Admin Dashboard</h1>
     <p>Welcome, {{ current_user.firstName }}</p>
     <a href="{{ url_for('auth.logout') }}">Logout</a>
+    <a href="{{ url_for('admin.users') }}">Users</a>
+    <a href="{{ url_for('admin.lectures') }}">Lectures</a>
   </body>
 </html>
