--- a/main_app/admin/templates/admin/edit_user.html
+++ b/main_app/admin/templates/admin/edit_user.html
@@ -17,6 +17,9 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" value="{{ user.email }}">
         <br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Type new password to update">
+        <br>
         <label for="role">Role:</label>
         <select id="role" name="role">
             <option value="Admin" {% if user.role == 'Admin' %}selected{% endif %}>Admin</option>
