--- a/main_app/admin/templates/admin/users.html
+++ b/main_app/admin/templates/admin/users.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Users</h1>
+    <a href="{{ url_for('admin.add_user') }}">Add User</a>
+    {% if users %}
     <table>
         <thead>
             <tr>
@@ -31,5 +33,8 @@
             {% endfor %}
         </tbody>
     </table>
+    {% else %}
+    <p>No users found</p>
+    {% endif %}
 </body>
 </html>
