--- a/main_app/admin/templates/admin/edit_lecture.html
+++ b/main_app/admin/templates/admin/edit_lecture.html
@@ -9,7 +9,7 @@
     <h1>Edit Lecture</h1>
     <form method="POST">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
+        <input type="text" id="title" name="title" value="{{ lecture.title }}" required>
         <br>
         <button type="submit">Edit Lecture</button>
     </form>
