--- a/main_app/admin/templates/admin/lectures.html
+++ b/main_app/admin/templates/admin/lectures.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lectures</title>
 </head>
 <body>
     <h1>Lectures</h1>
     <a href="{{ url_for('admin.add_lecture') }}">Add Lecture</a>
+    <a href="{{ url_for('admin.dashboard') }}">Back to Dashboard</a>
     {% if lectures %}
     <table>
         <thead>
