--- a/main_app/admin/templates/admin/add_user.html
+++ b/main_app/admin/templates/admin/add_user.html
@@ -1,34 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add User</title>
-</head>
-<body>
-    <h1>Add User</h1>
-    <form method="POST">
-        <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" required>
-        <br>
-        <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" required>
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <label for="role">Role:</label>
-        <select id="role" name="role" required>
-            <option value="Admin">Admin</option>
-            <option value="Teacher">Teacher</option>
-            <option value="Student">Student</option>
-        </select>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <button type="submit">Add User</button>
-    </form>
-    <a href="{{ url_for('admin.users') }}">Back to Users</a>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Dodaj ucznia{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
+{% endblock %}
+
+{% block content %}
+<h1>Dodaj ucznia</h1>
+<form method="POST">
+    <label for="firstName">Imie:</label>
+    <input type="text" id="firstName" name="firstName" required>
+    <br>
+    <label for="lastName">Nazwisko:</label>
+    <input type="text" id="lastName" name="lastName" required>
+    <br>
+    <label for="email">Adres e-mail:</label>
+    <input type="email" id="email" name="email" required>
+    <br>
+    <label for="role">Permisje:</label>
+    <select id="role" name="role" required>
+        <option value="Admin">Administrator</option>
+        <option value="Teacher">Nauczyciel</option>
+        <option value="Student">Uczen</option>
+    </select>
+    <br>
+    <label for="password">Haslo:</label>
+    <input type="password" id="password" name="password" required>
+    <br>
+    <button type="submit">Dodaj ucznia</button>
+</form>
+<a href="{{ url_for('admin.users') }}">Wroc do uczniow</a>
+{% endblock %}
