--- a/main_app/admin/templates/admin/dashboard.html
+++ b/main_app/admin/templates/admin/dashboard.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Admin Dashboard</title>
-  </head>
-  <body>
-    <h1>Admin Dashboard</h1>
-    <p>Welcome, {{ current_user.firstName }}</p>
-    <a href="{{ url_for('auth.logout') }}">Logout</a>
-    <a href="{{ url_for('admin.users') }}">Users</a>
-    <a href="{{ url_for('admin.lectures') }}">Lectures</a>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Panel Sterowania{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
+{% endblock %}
+
+{% block content %}
+<h1>Panel Sterowania Administratora</h1>
+<p>Welcome, {{ current_user.firstName }}</p>
+<a href="{{ url_for('admin.users') }}">Uczniowie</a>
+<a href="{{ url_for('admin.lectures') }}">Wyklady</a>
+{% endblock %}
