--- a/main_app/admin/templates/admin/edit_user.html
+++ b/main_app/admin/templates/admin/edit_user.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit User</title>
-</head>
-<body>
-    <h1>Edit User</h1>
-    <form method="POST">
-        <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" value="{{ user.firstName }}">
-        <br>
-        <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" value="{{ user.lastName }}">
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="{{ user.email }}">
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Type new password to update">
-        <br>
-        <label for="role">Role:</label>
-        <select id="role" name="role">
-            <option value="Admin" {% if user.role == 'Admin' %}selected{% endif %}>Admin</option>
-            <option value="Teacher" {% if user.role == 'Teacher' %}selected{% endif %}>Teacher</option>
-            <option value="Student" {% if user.role == 'Student' %}selected{% endif %}>Student</option>
-        </select>
-        <br>
-        <button type="submit">Update</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Edytuj uzytkownika{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
+{% endblock %}
+
+{% block content %}
+<h1>Edytuj uzytkownika</h1>
+<form method="POST">
+    <label for="firstName">Imie:</label>
+    <input type="text" id="firstName" name="firstName" value="{{ user.firstName }}">
+    <br>
+    <label for="lastName">Nazwisko:</label>
+    <input type="text" id="lastName" name="lastName" value="{{ user.lastName }}">
+    <br>
+    <label for="email">Adres e-mail:</label>
+    <input type="email" id="email" name="email" value="{{ user.email }}">
+    <br>
+    <label for="password">Haslo:</label>
+    <input type="password" id="password" name="password" placeholder="Type new password to update">
+    <br>
+    <label for="role">Permisje:</label>
+    <select id="role" name="role">
+        <option value="Admin" {% if user.role == 'Admin' %}selected{% endif %}>Administrator</option>
+        <option value="Teacher" {% if user.role == 'Teacher' %}selected{% endif %}>Nauczyciel</option>
+        <option value="Student" {% if user.role == 'Student' %}selected{% endif %}>Uczen</option>
+    </select>
+    <br>
+    <button type="submit">Aktualizuj</button>
+</form>
+{% endblock %}
