--- a/main_app/auth/templates/auth/login.html
+++ b/main_app/auth/templates/auth/login.html
@@ -1,17 +1,23 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <h1>Login</h1>
-    <form method="POST" action="{{ url_for('auth.login') }}">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required /><br />
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required /><br />
-      <button type="submit">Login</button>
-    </form>
-    <a href="{{ url_for('auth.signup') }}">Signup</a>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Logowanie{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
+{% endblock %}
+
+{% block content %}
+<div class="auth-container">
+    <div class="auth-card">
+        <h1>Logowanie</h1>
+        <form method="POST" action="{{ url_for('auth.login') }}">
+            <label for="email">Adres e-mail:</label>
+            <input type="email" id="email" name="email" required /><br />
+            <label for="password">Haslo:</label>
+            <input type="password" id="password" name="password" required /><br />
+            <button type="submit">Zaloguj</button>
+        </form>
+        <a href="{{ url_for('auth.signup') }}">Zarejestruj sie</a>
+    </div>
+</div>
+{% endblock %}
