--- a/main_app/auth/templates/auth/signup.html
+++ b/main_app/auth/templates/auth/signup.html
@@ -1,21 +1,27 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Signup</title>
-  </head>
-  <body>
-    <h1>Signup</h1>
-    <form method="POST" action="{{ url_for('auth.signup') }}">
-      <label for="firstName">First Name:</label>
-      <input type="text" id="firstName" name="firstName" /><br />
-      <label for="lastName">Last Name:</label>
-      <input type="text" id="lastName" name="lastName" required /><br />
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required /><br />
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required /><br />
-      <button type="submit">Signup</button>
-    </form>
-    <a href="{{ url_for('auth.login') }}">Login</a>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Signup - School Management System{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
+{% endblock %}
+
+{% block content %}
+<div class="auth-container">
+    <div class="auth-card">
+        <h1>Rejestracja</h1>
+        <form method="POST" action="{{ url_for('auth.signup') }}">
+            <label for="firstName">Imie:</label>
+            <input type="text" id="firstName" name="firstName" /><br />
+            <label for="lastName">Nazwisko:</label>
+            <input type="text" id="lastName" name="lastName" required /><br />
+            <label for="email">Adres e-mail:</label>
+            <input type="email" id="email" name="email" required /><br />
+            <label for="password">Haslo:</label>
+            <input type="password" id="password" name="password" required /><br />
+            <button type="submit">Zarejestruj sie</button>
+        </form>
+        <a href="{{ url_for('auth.login') }}">Logowanie</a>
+    </div>
+</div>
+{% endblock %}
