--- a/main_app/home/templates/home/index.html
+++ b/main_app/home/templates/home/index.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Home</title>
-  </head>
-  <body>
-    <h1>Welcome to School Web</h1>
-    <h2>Home Page</h2>
-    {% if current_user.is_authenticated %}
-        <h2>You are logged in as {{ current_user.firstName }} {{ current_user.lastName }}</h2>
-        <a href="{{ url_for('auth.logout') }}">Logout</a>
-      {% if current_user.role == 'Admin' %}
-        <a href="{{ url_for('admin.dashboard') }}">Admin Dashboard</a>
-      {% elif current_user.role == 'Teacher' %}
-        <a href="{{ url_for('teacher.dashboard') }}">Teacher Dashboard</a>
-      {% elif current_user.role == 'Student' %}
-        <a href="{{ url_for('students.dashboard') }}">Student Dashboard</a>
-      {% endif %}
-    {% else %}
-      <h2>Please login or signup</h2>
-      <a href="{{ url_for('auth.login') }}">Login</a>
-      <a href="{{ url_for('auth.signup') }}">Signup</a>
-    {% endif %}
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Strona glowna{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+{% endblock %}
+
+{% block content %}
+{% if current_user.is_authenticated %}
+    <div></div>
+{% else %}
+    <h2>Zaloguj sie lub zarejestruj</h2>
+    <a href="{{ url_for('auth.login') }}">Logowanie</a>
+    <a href="{{ url_for('auth.signup') }}">Rejestracja</a>
+{% endif %}
+{% endblock %}
