--- a/main_app/admin/templates/admin/add_user.html
+++ b/main_app/admin/templates/admin/add_user.html
@@ -1,34 +1,36 @@
-{% extends "base.html" %}
-
-{% block title %}Dodaj ucznia{% endblock %}
-
-{% block extra_css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
-{% endblock %}
-
-{% block content %}
-<h1>Dodaj ucznia</h1>
-<form method="POST">
+{% extends "base.html" %} {% block title %}Dodaj ucznia{% endblock %} {% block
+extra_css %}
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/admin.css') }}"
+/>
+{% endblock %} {% block content %}
+<div
+  style="
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  "
+>
+  <h1 class="page-title">Dodaj ucznia</h1>
+  <form method="POST">
     <label for="firstName">Imie:</label>
-    <input type="text" id="firstName" name="firstName" required>
-    <br>
+    <input type="text" id="firstName" name="firstName" required />
     <label for="lastName">Nazwisko:</label>
-    <input type="text" id="lastName" name="lastName" required>
-    <br>
+    <input type="text" id="lastName" name="lastName" required />
     <label for="email">Adres e-mail:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
+    <input type="email" id="email" name="email" required />
     <label for="role">Permisje:</label>
-    <select id="role" name="role" required>
-        <option value="Admin">Administrator</option>
-        <option value="Teacher">Nauczyciel</option>
-        <option value="Student">Uczen</option>
+    <select id="role" name="role">
+      <option value="Admin">Administrator</option>
+      <option value="Teacher">Nauczyciel</option>
+      <option value="Student">Uczen</option>
     </select>
-    <br>
     <label for="password">Haslo:</label>
-    <input type="password" id="password" name="password" required>
-    <br>
+    <input type="password" id="password" name="password" required />
     <button type="submit">Dodaj ucznia</button>
-</form>
-<a href="{{ url_for('admin.users') }}">Wroc do uczniow</a>
+  </form>
+  <a href="{{ url_for('admin.users') }}">Wroc do uczniow</a>
+</div>
 {% endblock %}
