--- a/main_app/admin/templates/admin/edit_lecture.html
+++ b/main_app/admin/templates/admin/edit_lecture.html
@@ -1,18 +1,28 @@
-{% extends "base.html" %}
-
-{% block title %}Edytuj wyklad{% endblock %}
-
-{% block extra_css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
-{% endblock %}
-
-{% block content %}
-<h1>Edytuj wyklad</h1>
-<form method="POST">
-    <label for="title">Tytul:</label>
-    <input type="text" id="title" name="title" required>
-    <br>
-    <button type="submit">Edytuj wyklad</button>
-</form>
-<a href="{{ url_for('admin.lectures') }}">Wroc do wykladows</a>
+{% extends "base.html" %} {% block title %}Edytuj wykład{% endblock %} {% block
+extra_css %}
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/admin.css') }}"
+/>
+{% endblock %} {% block content %}
+<div
+  style="
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  "
+>
+  <h1 class="page-title">Edytuj wykład</h1>
+  <form method="POST">
+    <label for="title">Tytuł:</label>
+    <input type="text" id="title" name="title" required />
+    <label for="description">Opis:</label>
+    <input type="text" id="description" name="description" required />
+    <label for="teacher_id">ID Nauczyciela:</label>
+    <input type="number" id="teacher_id" name="teacher_id" required />
+    <button type="submit">Edytuj wykład</button>
+  </form>
+  <a href="{{ url_for('admin.lectures') }}">Wróć do wykładów</a>
+</div>
 {% endblock %}
