--- a/main_app/students/templates/students/edit_enrolled_lecture.html
+++ b/main_app/students/templates/students/edit_enrolled_lecture.html
@@ -1,20 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit lecture</title>
-</head>
-<body>
-    <h1>Edit lecture</h1>
-    <form method="POST">
-        <select name="lecture" id="lecture">
-            {% for lecture in lectures %}
-            <option value="{{ lecture.lid }}">{{ lecture.title }}</option>
-            {% endfor %}
-        </select>
-        <button type="submit">Edit lecture</button>
-    </form>
-    <a href="{{ url_for('students.enrolled_lectures') }}">Back to enrolled lectures</a>
-</body>
-</html>
+{% extends "base.html" %} {% block title %}Edytuj Wyklad{% endblock %} {% block
+extra_css %}
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/admin.css') }}"
+/>
+{% endblock %} {% block content %}
+<div
+  style="
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  "
+>
+  <h1>Edytuj Wyklad</h1>
+  <a
+    href="{{ url_for('students.enrolled_lectures') }}"
+    style="margin-bottom: 2rem"
+    >Powrot do zapisanych wykladow</a
+  >
+
+  <form method="POST" style="width: 100%">
+    <label for="lecture">Wybierz wyklad:</label>
+    <select name="lecture" id="lecture" required>
+      {% for lecture in lectures %}
+      <option value="{{ lecture.lid }}">{{ lecture.title }}</option>
+      {% endfor %}
+    </select>
+    <button type="submit">Zapisz zmiany</button>
+  </form>
+</div>
+{% endblock %}
