--- a/main_app/teacher/templates/teacher/dashboard.html
+++ b/main_app/teacher/templates/teacher/dashboard.html
@@ -16,6 +16,9 @@ block extra_css %}
       Tutaj beda wyswietlane Twoje wyklady i narzedzia do zarzadzania
       obecnoscia.
     </p>
+    <a href="{{ url_for('teacher.lectures') }}" class="back-link"
+      >Moje Wykłady</a
+    >
   </div>
 </section>
 {% endblock %}
